# yt-dlp-api

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  config.example.toml
.github/workflows/: release.yml
.zed/: tasks.json
src/: config.rs  dto.rs  errors.rs  handlers.rs  main.rs  state.rs  validated_query.rs
